--- a/css/all.css
+++ b/css/all.css
@@ -4,8 +4,10 @@ body { font-family: "Open Sans", Helvetica, Arial; }
 .app .place_link { text-decoration: none; }
 .app .round_corners_default { -webkit-border-radius: 10px; -moz-border-radius: 10px; border-radius: 10px; }
 
-#hold_button { cursor: pointer; background-color: #0097ff; padding: 13px; margin: 15px 0px; font-weight: 600; font-size: 25px; color: #fff; }
+.button { width: 35%; float: right; cursor: pointer; background-color: #0097ff; padding: 13px; margin: 15px 0px; font-weight: 600; font-size: 25px; color: #fff; }
+#hold_button { background-color: #0097ff; }
 #hold_button.on { background-color: red; }
+#next_button { float: left; background-color: green; margin-right: 15px; }
 
 .main_place { text-align: left; color: #888; }
 .main_place .yelp { text-align: right; }
