--- a/css/all.css
+++ b/css/all.css
@@ -1,15 +1,27 @@
-body { font-family: "Open Sans", Helvetica, Arial; }
+body { font-family: "Open Sans", Helvetica, Arial; margin:0; padding:0; }
 
-.app, .intro { max-width: 500px; margin: 10px auto; text-align: center}
+.app { max-width: 500px; margin: 0px auto; text-align: center; }
+
+.app .navbar { margin: 0px auto 10px; text-align: center; background-color: #47b4ff; height: 50px; font-size: 20px; color: white;}
+.app .navbar .text { position: relative; top: 12px; }
+.app .navbar img { float: left; width: 50px; }
+.app .view_content { background-color: #fff;  }
 .app .place_link { text-decoration: none; }
 .app .round_corners_default { -webkit-border-radius: 10px; -moz-border-radius: 10px; border-radius: 10px; }
+.app .loader_image { margin-top: 25px; }
 
 .button { width: 35%; float: right; cursor: pointer; background-color: #0097ff; padding: 13px; margin: 15px 0px; font-weight: 600; font-size: 25px; color: #fff; }
+#button_container { margin: 0px 10px; }
+#button_container:after { content: ".";
+	display: block;
+	height: 0;
+	clear: both;
+	visibility: hidden; }
 #hold_button { background-color: #0097ff; }
 #hold_button.on { background-color: red; }
 #next_button { float: left; background-color: green; margin-right: 15px; }
 
-.main_place { text-align: left; color: #888; }
+.main_place { text-align: left; color: #888; margin: 0px 10px; }
 .main_place .yelp { text-align: right; }
 .main_place .header { min-height: 100px; font-size: 20px; color: #666; font-weight: 500; margin-bottom: 15px; font-weight: 600; }
 .main_place .header .name {}
