put phone in own div

--- a/templates/suggestion.view.html
+++ b/templates/suggestion.view.html
@@ -1,4 +1,4 @@
-<a class='place_link' data-place_id='<%= id%>' href='<%= url %>' target='_blank'>
+<!--<a class='place_link' data-place_id='<%= id%>' href='<%= url %>' target='_blank'>-->
 	<div class='main_place'>
 		<div class='yelp'><img src='images/yelp.png' /></div>
 		<div class='header'>
@@ -34,8 +34,10 @@
 				});
 			%>
 			</div>
-			<%= display_phone %>
+			<div class='phone'>
+				<%= display_phone %>
+			</div>
 		</div>
 		<div class='footer'></div>
 	</div>
-</a>
+<!--</a>-->
