--- a/css/all.css
+++ b/css/all.css
@@ -22,10 +22,13 @@ body { font-family: "Open Sans", Helvetica, Arial; margin:0; padding:0; }
 
 .main_place { text-align: left; color: #888; margin: 0px 10px; }
 .main_place .yelp { text-align: right; }
-.main_place .header { min-height: 100px; font-size: 20px; color: #666; font-weight: 500; margin-bottom: 15px; font-weight: 600; }
+.main_place .header { display: block; min-height: 100px; font-size: 20px; color: #666; font-weight: 500; margin-bottom: 15px; font-weight: 600; }
 .main_place .header .name {}
 .main_place .header .thumbnail { margin: 0px 0px 0px 15px; float: right; }
 .main_place .header .rating { float: left; font-size: 14px; margin: 2px 0px 0px 6px; }
 .main_place .header .rating img { position: relative; top: 4px; right: 5px; }
 .main_place .main { background-color: #eee; padding: 20px; font-size: 15px; }
 .main_place .main .category { font-size: 17px; margin-bottom: 20px; }
+.main_place .main .address { min-height: 50px; display: block; margin-bottom: 20px; }
+.main_place .main .address .map_icon { margin: -5px 15px 0px -2px; width: 50px; height: auto; float: left; }
+.main_place .main .phone { margin-left: 62px; }
