--- a/css/all.css
+++ b/css/all.css
@@ -2,11 +2,13 @@ body { font-family: "Open Sans", Helvetica, Arial; margin:0; padding:0; }
 
 .app { max-width: 500px; margin: 0px auto; text-align: center; }
 
-.app .navbar { position: fixed; z-index: 10101; max-width: 500px; top: 0px; margin: 0px auto; text-align: center; background-color: #47b4ff; height: 50px; font-size: 20px; color: white;}
-.app .navbar .text { width: 300px; position: relative; top: 12px; }
+.app .navbar { position: fixed; z-index: 10101; max-width: 500px; top: 0px; margin: 0px auto; text-align: center; background-color: #47b4ff; height: 50px; font-size: 19px; color: white;}
+.app .navbar .text { width: 300px; position: relative; top: 12px; left: -10px; }
 .app .navbar img { float: left; width: 50px; }
 .app .view_content { margin: 60px 0px 85px; background-color: #fff;  }
 .app .footer { position: fixed; left: 0px; bottom: 0px; width: 100%; background-color: #ccc; }
+.app .settings { cursor: pointer; position: fixed; top: 0px; right: 0px; z-index: 10102; }
+.app .settings img { width: 49px; height: auto; }
 
 .app .place_link { text-decoration: none; }
 .app .round_corners_default { -webkit-border-radius: 10px; -moz-border-radius: 10px; border-radius: 10px; }
