--- a/templates/header.component.html
+++ b/templates/header.component.html
@@ -1,3 +1,6 @@
+<div class='settings'>
+	<img src='images/gear_icon.png' />
+</div>
 <div class='navbar'>
 	<img src='images/logo_02.png'/>
 	<div class='text'><%=text%></div>
